force-app/main/default/objects/leankor__IssueLog__c/leankor__IssueLog__c.object-meta.xml
<CustomObject>
    <description>This object defines all the issues, risks and business dependencies which may be impacting the work represented by a KanbanCard object. There can be one or more IssueLog per KanbanCard.</description>
    <label>IssueLog</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>IssueLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IssueLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>