force-app/main/default/objects/leankor__IssueLog__c/fields/leankor__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>leankor__AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssignedTo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IssueLogs</relationshipName>
    <type>Lookup</type>
</CustomField>