force-app/main/default/objects/leankor__IssueLog__c/fields/leankor__KanbanCard__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kanban Card</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>IssueLogs</relationshipLabel>
    <relationshipName>IssueLogs</relationshipName>
    <type>Lookup</type>
</CustomField>