force-app/main/default/objects/leankor__IssueLog__c/fields/leankor__Probability__c.field-meta.xml
<CustomField>
    <fullName>leankor__Probability__c</fullName>
    <label>Probability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Very Likely</fullName>
            </value>
            <value>
                <fullName>Imminent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>