force-app/main/default/objects/leankor__IssueLog__c/fields/leankor__Resolved__c.field-meta.xml
<CustomField>
    <fullName>leankor__Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resolved</label>
    <type>Checkbox</type>
</CustomField>