force-app/main/default/objects/leankor__IssueLog__c/fields/leankor__ResolvedTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__ResolvedTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ResolvedTime</label>
    <type>DateTime</type>
</CustomField>