force-app/main/default/objects/leankor__IssueLog__c/fields/leankor__RiskMitigation__c.field-meta.xml
<CustomField>
    <fullName>leankor__RiskMitigation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Mitigation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>