force-app/main/default/objects/leankor__IssueLog__c/fields/leankor__Score__c.field-meta.xml
<CustomField>
    <fullName>leankor__Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>