force-app/main/default/objects/leankor__IssueLog__c/fields/leankor__StatusType__c.field-meta.xml
<CustomField>
    <fullName>leankor__StatusType__c</fullName>
    <label>Status Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Business Dependency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>