force-app/main/default/objects/leankor__IssueLog__c/fields/leankor__Weight__c.field-meta.xml
<CustomField>
    <fullName>leankor__Weight__c</fullName>
    <label>Weight</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Important</fullName>
            </value>
            <value>
                <fullName>Very Important</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>